fixed contact overflow

--- a/contact/contact.css
+++ b/contact/contact.css
@@ -2,7 +2,7 @@
 body{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-
+    overflow-x: hidden;
     margin: auto;
     margin-top: 3%;
 
