--- a/index.css
+++ b/index.css
@@ -111,6 +111,7 @@ body {
   transition: margin 0.3s ease 0.1s;
   background-color: rgb(0,0,0);
   opacity: 1;
+  overflow: hidden;
 } 
 
 #welcome{
